--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "nuxt": "^3.1.0"
   },
   "dependencies": {
+    "@esbuild/win32-x64": "^0.17.5",
+    "@types/jsonwebtoken": "^9.0.1",
     "crypto": "^1.0.1",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.13.0"
   }
 }
