--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "nuxt": "^3.1.0"
   },
   "dependencies": {
+    "ant-design-vue": "^3.2.15",
     "crypto": "^1.0.1",
     "jsonwebtoken": "^9.0.0",
-    "mongodb": "^4.13.0"
+    "mongodb": "^4.13.0",
+    "sass": "^1.58.0",
+    "unplugin-vue-components": "^0.23.0",
+    "vue-toastification": "^2.0.0-rc.5"
   }
 }
